# number_classificator

./: CMakeLists.txt  README.md  main.cpp  mnist.model
regression/: mnist_regression.cpp  mnist_regression.hpp
